added repository url in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: ist_validator
 description: "A simple package to validate."
-version: 0.0.1
+version: 0.0.2
 homepage: https://spee.dev
+repository: https://github.com/speeedev/ist_validator
 
 environment:
   sdk: ^3.5.2
